[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyRat2.gd" type="Script" id=2]
[ext_resource path="res://sprites/ratspritesheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.5, 6 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stun"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "stun"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachine" id=12]
resource_local_to_scene = true
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 720, 228 )
states/stun/node = SubResource( 8 )
states/stun/position = Vector2( 1060.47, 56 )
states/walk/node = SubResource( 9 )
states/walk/position = Vector2( 531.474, 56 )
transitions = [ "idle", "walk", SubResource( 10 ), "walk", "idle", SubResource( 11 ) ]
start_node = "idle"
graph_offset = Vector2( -96.5261, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[node name="EnemyRat2" instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
hframes = 9

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="CollisionShape2D" parent="StunHurtBox" index="0"]
visible = false
position = Vector2( -0.5, 1 )
shape = SubResource( 5 )

[node name="AnimationPlayer" parent="." index="5"]
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/stun = SubResource( 6 )
anims/walk = SubResource( 3 )

[node name="AnimationTree" parent="." index="6"]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="StunHurtBox" to="." method="_on_StunHurtBox_body_entered"]
